<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tabunlock="http://schemas.android.com/apk/res/com.android.tabunlock"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:background="#70000000" android:gravity="center_horizontal">

	<FrameLayout android:id="@+id/bar" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center_horizontal"
		android:layout_alignParentBottom="true" android:layout_gravity="bottom"
		android:background="@drawable/btn_bar">
		<Button android:id="@+id/cali" 
            android:layout_gravity="center"
			android:layout_width="266dp"  
            android:background="@drawable/button_background"            
			android:textSize="24sp" 
            android:layout_height="wrap_content" android:textColor="#000000" 
			android:text="@string/gsensor_calibration"></Button>

	</FrameLayout>
	<TextView android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:id="@+id/textView2" android:layout_width="wrap_content"
		android:text="@string/gsensor_hint2" android:layout_below="@+id/textView1"
		android:layout_alignLeft="@+id/textView1"></TextView>
	<RelativeLayout 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
	android:background="@drawable/wo_level_v" 
    android:layout_alignTop="@+id/textView1" 
	android:layout_toRightOf="@+id/linearLayout1" 
    android:id="@+id/linearLayout2">
		<ImageView android:layout_width="wrap_content" android:id="@+id/imageView2" 
		android:layout_height="wrap_content" android:src="@drawable/bubble_v" 
		android:layout_centerVertical="true" android:layout_centerHorizontal="true">
		</ImageView>
	</RelativeLayout>
	<RelativeLayout 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
	android:id="@+id/linearLayout1" 
    android:background="@drawable/wo_level_h" 
	android:layout_below="@+id/linearLayout2" 
    android:layout_alignParentLeft="true" 
	android:layout_marginLeft="28dp" 
    android:layout_marginTop="16dp">
		<ImageView 
        android:layout_width="wrap_content" 
        android:id="@+id/imageView1" 
		android:layout_height="wrap_content" 
        android:src="@drawable/bubble_h" 
		android:layout_centerVertical="true" 
        android:layout_centerHorizontal="true">
		</ImageView>
	</RelativeLayout>
	<TextView android:layout_height="wrap_content" 
    android:textAppearance="?android:attr/textAppearanceMedium" 
	android:id="@+id/textView1" android:layout_width="wrap_content" 
	android:text="@string/gsensor_hint1" android:layout_alignParentTop="true" 
	android:layout_alignLeft="@+id/linearLayout1" android:layout_marginTop="27dp">
	</TextView>

</RelativeLayout>

